<resources>
  <string name="app_name">RIVA X</string>
  <string name="title_activity_welcome">RIVA X</string>
  <string name="title_libre_caps">RIVA X</string>
  <string name="hello_world">Hello world!</string>
  <string name="action_settings">Settings</string>
  <string name="play_music">Play music from…</string>
  <string name="favorite_button">Favorites</string>
  <string name="notification_ticker_text">Multi Room Audio</string>
  <string name="BtOnAlert">Turning On BT</string>
  <string name="AuxOnAlert">Turning On AUX</string>
  <string name="ok">OK</string>
  <string name="requestTimeout">Speaker response timed out. Please try again</string>
  <string name="pleaseWait">Please wait…</string>
  <string name="pleaseWait_looking">Please wait…Looking for device in SetupMode</string>
  <string name="browseFailed">Browse content failed!</string>
  <string name="deviceNotFound">Speaker not found</string>
  <string name="noContent">No content</string>
  <string name="loadingMusic">Loading the music contents.Please wait..</string>
  <string name="deviceMissing">Oops! Speaker is missing! check if it is still connected</string>
  <string name="cancel">Cancel</string>
  <string name="retry">Retry</string>
  <string name="cannotCreateDMS">Cannot create DMS Processor</string>
  <string name="loadingLocalContent">Loading Local contents</string>
  <string name="restartAppManually">Loading of Local content failed! Auto restarting is failed.Please restart the app manually!</string>
  <string name="failed">FAILED</string>
  <string name="software_failed">Software Update Failed, Something went wrong!!!</string>
  <string name="deviceNameChanging">Speaker Name Changing</string>
  <string name="deviceNameEmpty">Device name cannot be an empty</string>
  <string name="deviceNameNull">Device Name Cannot Be an Null</string>
  <string name="deviceLength">Speaker Name cannot be more than 50</string>
  <string name="Settings">Settings</string>
  <string name="deviceNamecannotBeEmpty">Speaker Name Cannot Be an Empty</string>
  <string name="deviceRebooting">Speaker is Rebooting…</string>
  <string name="httpPostFailed">HTTP Post Got Failed , please Retry By Clicking Save</string>
  <string name="done">Done</string>
  <string name="dontShowAgain">Dont Show Again</string>
  <string name="doubleTapToExit">Please double tap to exit</string>
  <string name="wifiConnectivityStatus">Wifi Connectivity Status</string>
  <string name="connectToWifi">Connect to Wi-Fi network</string>
  <string name="restartTitle">Network Change Happened,App Will Restart</string>
  <string name="deviceNotAvailable">Speaker Not Available </string>
  <string name="removeDeviceMsg">Do You Want To Remove The Speaker   </string>
  <string name="removeDeviceMsg2"> from the List ??</string>
  <string name="searchTextPlaceHolder">Please enter text to search</string>
  <string name="enterText">Please enter text</string>
  <string name="searchText">Please enter text to search</string>
  <string name="storagePermitToast">You need to allow read storage permission to stream local media</string>
  <string name="enableLocationPermit">You need to allow location permission to detect speaker Wi-Fi, please goto settings and enable
        \'location\' permission.</string>
  <string name="noNetworkFound">No Network Found!</string>
  <string name="audio_output">Audio Output</string>
  <string name="next">Next</string>
  <string name="mediaserver">Media Server</string>
  <string name="aux">Aux In</string>
  <string name="noDeviceFound">No free speakers available</string>
  <string name="title_error_sac_message">
        Please connect to speaker ssid
    </string>
  <string name="ipAddress">IP Address </string>
  <string name="sourceIndexWrong">Selected source index is worng</string>
  <string name="lastSong">Last Song</string>
  <string name="no_item_empty">No item-Empty</string>
  <string name="closingTheApp">Closing the Grundig App</string>
  <string name="btOn">BT On</string>
  <string name="casting">Casting</string>
  <string name="actionFailed">Action Failed</string>
  <string name="NoRenderer">No Renderer</string>
  <string name="Devicenotplaying">Speaker not playing</string>
  <string name="seek_not_allowed">Seek not allowed</string>
  <string name="no_active_playlist">No active playlist available.Please select a song</string>
  <string name="mConnectingToMainNetwork">Connecting To </string>
  <string name="mSearchingTheDevce">Searching speakers…</string>
  <string name="mConfiguredSuccessfully">Configured successfully</string>
  <string name="mTimeoutSearching">Configuration Failed,
        \n Please Retry Setup  </string>
  <string name="title_activity_google_cast_update_after_sac">Firmware Upgrade</string>
  <string name="gcast_update_done">Firmware Upgrade Completed
        \nSpeaker is now Restarting </string>
  <string name="title_activity_gcast_update_status_available">Firmware Update Status</string>
  <string name="fwUpdateFailed">Firmware Update Failed</string>
  <string name="no_update_gcast">No Update Available</string>
  <string name="downloadingtheFirmare">Downloading the firmware update</string>
  <string name="noupdateAvailable">No update available, setup is completed</string>
  <string name="upgrading">Upgrading</string>
  <string name="noDeviceUpdating">No device under update. </string>
  <string name="newrestartApp">Network auto changed to  \" %1$s \" in Wi-Fi Settings Menu \nPlease reconnect to  \" %2$s \" </string>
  <string name="PLAY_PAUSE_NOT_ALLOWED">Play/Pause not available</string>
  <string name="NEXT_PREVIOUS_NOT_ALLOWED">Next/Prev not available</string>
  <string name="SEEK_FAILED">SeekFailed</string>
  <string name="RENDERER_NOT_PRESENT">Renderer not found,please try selecting source again or reboot device</string>
  <string name="AVTRANSPORT_NOT_FOUND">AVTransport service not found,please refresh or reboot device</string>
  <string name="FAIL_ALERT_TEXT">Playback Failed</string>
  <string name="NO_URL_ALERT_TEXT">No URL</string>
  <string name="NO_NEXT_SONG_ALERT_TEXT">End of playlist</string>
  <string name="NO_PREV_SONG_ALERT_TEXT">No previous song</string>
  <string name="SONG_NOT_SUPPORTED">Unsupported format</string>
  <string name="noItems">No items available</string>
  <string name="retrieving">Please wait we are Retrieving Speaker Information</string>
  <string name="getting_scan_results">Getting Speaker ScanResults..</string>
  <string name="password">Password</string>
  <string name="open">OPEN</string>
  <string name="left">Left</string>
  <string name="right">Right</string>
  <string name="skip">Skip</string>
  <string name="things_try">Things to try out</string>
  <string name="screen2_tv1">Here are some of the many things \n you can ask Alexa</string>
  <string name="learn_more1">To learn more and access additional features,</string>
  <string name="learn_more2">download the </string>
  <string name="learn_more3"> Amazon Alexa App.</string>
  <string name="ask_alexa1">Alexa, what\'s the weather?</string>
  <string name="ask_alexa2">Alexa, play my Flash Briefing.</string>
  <string name="ask_alexa3">Alexa, what are some top rated \nIndian restaurants?</string>
  <string name="ask_alexa4">Alexa, set Timer for 20 mins.</string>
  <string name="sign_in_az">Sign in to your Amazon account to enable Alexa Voice Service features.</string>
  <string name="engUSLang">English (US)</string>
  <string name="deviceLengthReached">Device Name Maximum length reached</string>
  <string name="engUKLang">English (UK)</string>
  <string name="deutschLang">Deutsch</string>
  <string name="frenchLang">French</string>
  <string name="italyLang">Italy</string>
  <string name="spainLang">Spain</string>
  <string name="alexaText">amazon alexa</string>
  <string name="somethingWentWrong">Something went wrong , please try again later.</string>
  <string name="somethingWentWrong_tryAgain">Something went wrong, please try again</string>
  <string name="enableRecordPermit">Permission to record audio is required to instruct Alexa, please goto app settings and enable
        \'Microphone\' permission</string>
  <string name="deviceMicOn">Speaker MIC is ON</string>
  <string name="get_started">Get Started</string>
  <string name="permission_location_rationale">You need to allow location permission to detect speaker Wi-Fi</string>
  <string name="discovery">Discovery</string>
  <string name="add">Add</string>
  <string name="tutorials">Tutorials</string>
  <string name="no_device_found">No speakers found</string>
  <string name="make_sure_devices_connected_to_wifi">Make sure all of your devices are connected to the same Wi-Fi and refresh</string>
  <string name="refresh">Refresh</string>
  <string name="using_speaker_first_time">Using the speaker for the first time?</string>
  <string name="setup_speaker">Setup New Speaker</string>
  <string name="device_setup2">Speaker Setup</string>
  <string name="setup_instructions">Setup Instructions</string>
  <string name="one">1</string>
  <string name="power_on_libre_device">Power on RIVA X speaker</string>
  <string name="go_to_wifi_settings">Go to Wi-Fi settings and select \'RIVAACONCERT_xxxxxx\'/\'RIVAASTADIUM_xxxxxx\' from the Wi-Fi list</string>
  <string name="two">2</string>
  <string name="three">3</string>
  <string name="after_connecting_to_libre_device"><![CDATA[After connecting to the RIVA X speaker, return to the RIVA X app & click next]]></string>
  <string name="wifi_settings">Wi-Fi Settings</string>
  <string name="device_name"><b>Speaker Name</b></string>
  <string name="connect_device_to_wifi">Connect speaker to Wi-Fi network</string>
  <string name="select_wifi">Select a Wi-Fi</string>
  <string name="wifi_pwd">Wi-Fi Password</string>
  <string name="manual_ssid_title">Enter Wi-Fi Name</string>
  <string name="manual_ssid_hint">Enter Network Name</string>
  <string name="manual_security_title">Wi-Fi Security</string>
  <string name="manual_security_hint">Select Security Type</string>
  <string name="hmmm">Hmmm…</string>
  <string name="not_sure_device_setup_completed">We are not able to make sure whether the speaker setup has completed.</string>
  <string name="device_light_white">If the speaker light is white.</string>
  <string name="make_sure_connected_to_same_wifi">Make sure your phone is connected to the same Wi-Fi network*</string>
  <string name="device_blinking_white">If the speaker light is blinking white.</string>
  <string name="entered_incorrect_wifi_pwd">You might have entered incorrect Wi-Fi password*</string>
  <string name="device_blinking_colors">If the speaker light is blinking colors.</string>
  <string name="login_with_amazon_msg"><![CDATA[To enable voice commands & Amazon services, please login with Amazon account.]]></string>
  <string name="device_setup_successfull">Your speaker has been set up successfully.</string>
  <string name="congrats">Congrats!</string>
  <string name="select_locale">Select locale for Alexa</string>
  <string name="new_spotify_heading">Ask Alexa to play your favourite playlists , artists and genres.For example, just say, \"Alexa, play Today’s Top Hits”.</string>
  <string name="new_spotify_heading2">Listen	on	your speakers or TV, using the Spotify app as a	remote.</string>
  <string name="new_spotify_main_header">Use your voice to control Spotify.</string>
  <string name="remote_control">Remote Control</string>
  <string name="openspotifyapp">Open Spotify App</string>
  <string name="spotifyConnect">Spotify Connect</string>
  <string name="learnMore">Learn more</string>
  <string name="optionally_you_can_set_up">Optionally, You can set up the below features now, or Skip to home. If you wish to setup later, you can find it in speaker settings.</string>
  <string name="setup_chromecast">Setup Chromecast</string>
  <string name="skip_to_home">Skip to Home</string>
  <string name="setup_amazon_login">Setup Amazon Login</string>
  <string name="setup_device">Setup Device</string>
</resources>