<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    android:background="@drawable/rounded_white_bg"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="8dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textStyle="bold"
        android:text="@string/select_locale"
        android:textColor="@color/black"
        app:fontFamily="sans-serif" />

    <RadioGroup
        android:id="@+id/rg_select_locale"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/rb_en_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@null"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/engUSLang"
            android:textColor="@color/rb_locale_textcolor_selector"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rb_en_uk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@null"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/engUKLang"
            android:textColor="@color/rb_locale_textcolor_selector"
            android:textSize="16sp"
            app:fontFamily="sans-serif-medium" />

        <RadioButton
            android:id="@+id/rb_deu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@null"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/deutschLang"
            android:textColor="@color/rb_locale_textcolor_selector"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rb_fr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@null"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/frenchLang"
            android:textColor="@color/rb_locale_textcolor_selector"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rb_it"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@null"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/italyLang"
            android:textColor="@color/rb_locale_textcolor_selector"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rb_es"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@null"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/spainLang"
            android:textColor="@color/rb_locale_textcolor_selector"
            android:textSize="16sp" />

    </RadioGroup>

</LinearLayout>