<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/screen_bg">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/screen_bg"
        android:minHeight="?attr/actionBarSize">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageButton
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:paddingLeft="4dp"
                android:paddingRight="30dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:src="@drawable/ic_arrow_back_white"
                android:background="@android:color/transparent"
               />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/spotifyConnect"
                android:textSize="21sp"
                android:gravity="center"
                android:padding="10dp"
                android:id="@+id/choosesong"
                android:textColor="@color/white"/>
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/textView2"
        android:orientation="vertical"

        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_spotify_heading"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_marginLeft="10dp"
            android:paddingRight="4dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remote_control"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="13dp"
            android:paddingRight="4dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_spotify_heading2"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_marginLeft="13dp"
            android:paddingRight="4dp"
            android:layout_marginTop="2dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/learnMore"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:id="@+id/learnMore"
            android:layout_margin="20dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="italic|bold"/>

    </LinearLayout>
    <TextView
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/openspotifyapp"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:background="@color/brand_light_grey"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/openSpotify" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/new_spotify_main_header"
        android:id="@+id/textView2"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />
</RelativeLayout>
