<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context="com.cumulations.libreV2.activity.oem.SetUpDeviceActivity"
  android:background="@color/screen_bg">

  <com.google.android.material.appbar.AppBarLayout
    android:id="@+id/appbarLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toTopOf="parent"
    android:background="@color/screen_bg">

    <androidx.appcompat.widget.Toolbar
      android:id="@+id/toolbar"
      android:layout_width="match_parent"
      android:layout_height="?attr/actionBarSize"
      app:contentInsetLeft="0dp"
      app:contentInsetStart="0dp">

      <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginLeft="?attr/actionBarSize"
          android:layout_marginRight="?attr/actionBarSize"
          android:layout_centerInParent="true"
          android:text="@string/setup_device"
          android:textStyle="bold"
          android:textColor="@color/white"
          android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatImageView
          android:id="@+id/iv_back"
          android:layout_width="?attr/actionBarSize"
          android:layout_height="?attr/actionBarSize"
          android:background="?attr/selectableItemBackgroundBorderless"
          android:padding="16dp"
          android:visibility="gone"
          app:srcCompat="@drawable/ic_arrow_back_white" />
      </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>
  </com.google.android.material.appbar.AppBarLayout>
  <LinearLayout
    android:paddingBottom="?attr/actionBarSize"
    android:layout_marginTop="100dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginHorizontal="20dp"
    app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
    <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/txt_speakerName"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textSize="18sp"
      android:gravity="left"
      tools:text="@string/login_with_amazon_msg"
      android:textColor="@color/white" />
    <androidx.appcompat.widget.AppCompatTextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textSize="16sp"
      android:layout_marginTop="24dp"
      android:gravity="left"
      android:alpha=".7"
      android:text="@string/optionally_you_can_set_up"
      android:textColor="@color/white" />

    <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/btn_setup_chromecast"
      style="@style/OrangeAppButtonStyle"
      android:layout_width="match_parent"
      android:layout_height="60dp"
      android:layout_marginTop="40dp"
      android:gravity="center"
      android:layout_marginHorizontal="15dp"
      android:text="@string/setup_chromecast"
      android:textColor="@color/white"
      android:textSize="14sp" />
    <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/btn_signin_amazon"
      style="@style/OrangeAppButtonStyle"
      android:layout_width="match_parent"
      android:layout_height="60dp"
      android:layout_marginTop="30dp"
      android:layout_marginHorizontal="15dp"
      android:enabled="true"
      android:text="@string/setup_amazon_login"
      android:textColor="@color/white"
      android:gravity="center"
      android:textSize="14sp" />

    <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/btn_skip_to_home"
      style="@style/OrangeAppButtonStyle"
      android:layout_width="match_parent"
      android:layout_height="60dp"
      android:layout_marginTop="50dp"
      android:layout_marginBottom="16dp"
      android:layout_marginHorizontal="15dp"
      android:background="@drawable/app_btn_selector"
      android:enabled="true"
      android:text="@string/skip_to_home"
      android:textAllCaps="false"
      android:gravity="center"
      android:textColor="@color/app_btn_textcolor_selector" />

    <androidx.appcompat.widget.AppCompatImageView
      android:scaleType="fitCenter"
      android:layout_marginTop="24dp"
      android:paddingTop="8dp"
      android:paddingLeft="24dp"
      android:visibility="gone"
      app:srcCompat="@drawable/device_setup_success"
      android:layout_width="match_parent"
      android:layout_height="wrap_content" />

    <androidx.appcompat.widget.AppCompatTextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:layout_marginLeft="16dp"
      android:layout_marginTop="28dp"
      android:layout_marginRight="16dp"
      android:gravity="center"
      android:visibility="gone"
      android:text="@string/congrats"
      android:textColor="@color/white" />
    <androidx.appcompat.widget.AppCompatTextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:layout_marginLeft="16dp"
      android:layout_marginRight="16dp"
      android:gravity="center"
      android:visibility="gone"
      android:text="@string/device_setup_successfull"
      android:textColor="@color/app_text_color_disabled" />
  </LinearLayout>
  <RelativeLayout
    android:id="@+id/lay_Loader"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_loader"
    android:visibility="gone">

    <ProgressBar
      android:id="@+id/progress_bar"
      android:layout_width="100dp"
      android:layout_height="100dp"
      android:layout_centerInParent="true"
      android:indeterminateTint="@color/brand_orange"
      android:background="@color/transparent">
    </ProgressBar>
  </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>